# json-ld

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compaction/: Cargo.toml
crates/compaction/src/: document.rs  iri.rs  lib.rs  node.rs  property.rs  value.rs
crates/context-processing/: Cargo.toml
crates/context-processing/src/: lib.rs  processed.rs
crates/context-processing/src/algorithm/: define.rs  iri.rs  merged.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: container.rs  id.rs  indexed.rs  lang_string.rs  lib.rs  print.rs  serialization.rs  term.rs  ty.rs
crates/core/src/context/: definition.rs  inverse.rs  mod.rs
crates/core/src/deserialization/: mod.rs
crates/core/src/deserialization/object/: list.rs  mod.rs  node.rs  value.rs
crates/core/src/document/: mod.rs
crates/core/src/flattening/: environment.rs
crates/core/src/loader/: mod.rs
crates/core/src/loader/reqwest/: mod.rs
crates/core/src/object/: list.rs  mod.rs  typ.rs  value.rs
crates/core/src/object/node/: mod.rs  multiset.rs  properties.rs  reverse_properties.rs
crates/core/src/rdf/: mod.rs  quad.rs
crates/expansion/: Cargo.toml
crates/expansion/src/: array.rs  document.rs  element.rs  error.rs  expanded.rs  lib.rs  literal.rs  node.rs  options.rs  value.rs  warning.rs
crates/serialization/: Cargo.toml
crates/serialization/examples/: into_json_ld.rs
crates/serialization/src/: lib.rs
crates/serialization/src/expanded/: default_graph.rs  graph.rs  list.rs  mod.rs  node.rs  object.rs  property.rs  value.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: container.rs  direction.rs  expandable.rs
crates/syntax/src/context/: print.rs
crates/syntax/src/context/definition/: key.rs  mod.rs  reference.rs  type_.rs
crates/syntax/src/context/term_definition/: id.rs  mod.rs  nest.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/testing/src/ty/: mod.rs  parse.rs
src/: lib.rs
src/processor/: mod.rs  remote_document.rs
tests/: compact.rs  custom.rs  expand.rs  flatten.rs  to_rdf.rs
