[package]
name = "json-ld-context-processing-next"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD context processing implementation"
documentation = "https://docs.rs/json-ld-context-processing"
readme = "README.md"

[dependencies]
json-ld-core-next.workspace = true
json-ld-syntax-next.workspace = true
iref.workspace = true
rdf-types.workspace = true
futures.workspace = true
mown.workspace = true
contextual.workspace = true
thiserror.workspace = true
owning_ref = "0.4.1"
