[package]
name = "json-ld-expansion-next"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD document expansion implementation"
documentation = "https://docs.rs/json-ld-expansion"
readme = "README.md"

[dependencies]
json-ld-core-next.workspace = true
json-ld-syntax-next.workspace = true
json-ld-context-processing-next.workspace = true
json-syntax.workspace = true
langtag.workspace = true
iref.workspace = true
rdf-types.workspace = true
futures.workspace = true
mown.workspace = true
educe.workspace = true
contextual.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
static-iref.workspace = true
