[package]
name = "json-ld-serialization-next"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD serialization"
documentation = "https://docs.rs/json-ld-serialization"
readme = "README.md"

[dependencies]
json-ld-core-next.workspace = true
linked-data-next.workspace = true
iref.workspace = true
rdf-types.workspace = true
json-syntax.workspace = true
indexmap.workspace = true
thiserror.workspace = true
xsd-types = "0.9.1"

[dev-dependencies]
linked-data-next = { workspace = true, features = [ "derive" ] }
contextual.workspace = true
json-syntax.workspace = true
